syntax = "proto3";
package sixprotocol.nftmngr;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";
import "sixprotocol/nftmngr/nft_data.proto";

message NftCollection {
  string nftSchemaCode = 1;
  uint64 total = 2;
  repeated NftData nftDatas = 3;
}
